Fix dark mode tiles

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -8,6 +8,4 @@ body {
   background-color: #ffffff;
   background-color: transparent;
   background-image: url("/images/asfalt-dark.png");
-
-  [data-theme='business'] & {}
 }
